ENYO-2703: fix problem on hidden by phobos panel tooltip

--- a/ares/ares-rules.less
+++ b/ares/ares-rules.less
@@ -315,6 +315,14 @@
 	display: inline-block;
 }
 
+.ares-tooltip-last {
+	left: -135%;
+}
+
+.ares-tooltip-last:before {
+	left: 67px;
+}
+
 p.break { padding: 1px 0; }
 
 .file-chooser-input { width: 470px; }
